Fixed spacing in partup detail sidebar

--- a/app/client/stylesheets/components/pu-sidebar.sass
+++ b/app/client/stylesheets/components/pu-sidebar.sass
@@ -47,3 +47,6 @@
 
     .pu-button
         margin-top: 20px - 8px
+
+    .pu-list-tags
+        margin-top: 20px - 8px
